--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
+    "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.8.0"
   },
   "devDependencies": {
